fix: m4m body and spacing issues

--- a/src/css/variablesCustom.css
+++ b/src/css/variablesCustom.css
@@ -714,6 +714,11 @@
   --button-font-size-mobile: 1.1rem;
   --image-no-margin-img-margin: 0;
   --button-primary-color-hover: white;
+  --spacer-margin: 1.5rem 0 0;
+  --any-margin-top-first-child: 1.5rem;
+  --any-margin-top-first-child-mobile: 1.5rem;
+  --header-logo-big-width: 100%;
+  --header-logo-big-width-mobile: 100%;
 }
 
 .theme-light {
